FEAT: Se agrega la funcionalidad bonus de buscar promociones de post por Id de vendedor